--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEME Generator</title>
-    <link rel="stylesheet" href="mem.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body class="hero">
       <div class="meme-generator">
@@ -15,7 +15,7 @@
       <div class="meme-author"></div>
     </div>
 
-    <script src="mem.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 
